big refactor - v2 is the new norm

--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,7 @@ build/
 # =============================================================================
 checkpoints/
 checkpoints_*/
-v2/checkpoints/
-v2/archive/
+archived_models/
 *.pt
 
 # =============================================================================
