--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "puppeteer": "^24.33.0",
     "typescript": "^5.3.0",
     "vite": "^5.0.0"
   },
